syntax = "proto3";

option go_package = "./pb/";
option optimize_for = LITE_RUNTIME;

package pb;

message CastMessage {
  enum ProtocolVersion {
    CASTV2_1_0 = 0;
  }
  ProtocolVersion protocol_version = 1;

  string source_id = 2;
  string destination_id = 3;
  string namespace = 4;

  enum PayloadType {
    STRING = 0;
    BINARY = 1;
  }
  PayloadType payload_type = 5;

  optional string payload_utf8 = 6;
  optional bytes payload_binary = 7;
}
